--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "classmap": ["lessc.inc.php"]
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7.27",
-        "squizlabs/php_codesniffer": "3.3.2"
+        "phpunit/phpunit": "~6.0",
+        "squizlabs/php_codesniffer": "~3.3"
     },
     "scripts": {
         "test": [
