--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,6 @@ steps:
 - name: phpcs
   image: joomlaprojects/docker-images:php7.4
   commands:
-  - vendor/bin/phpcs --config-set installed_paths vendor/joomla/coding-standards
   - vendor/bin/phpcs -p --report=full --extensions=php --standard=ruleset.xml lessc.inc.php lessify lessify.inc.php
 
 - name: phpmd
@@ -69,7 +68,7 @@ steps:
     image: joomlaprojects/docker-images:php5.3
     commands:
       - php -v
-      - composer update --prefer-stable
+      - composer update --ignore-platform-reqs --prefer-stable
     volumes:
       - name: composer-cache
         path: /tmp/composer-cache
@@ -342,6 +341,6 @@ volumes:
 
 ---
 kind: signature
-hmac: 58cdf2afa4e38813b94e1d51270df354735eb5ac3ec1071f89eda18ccf4125e5
+hmac: 3e81a7c48ced8b189538371fa08fff1cc6f18755e060cb6a0ecd702f439db3e8
 
 ...
